<?xml version="1.0" encoding="UTF-8"?>

<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.spatacean</groupId>
  <artifactId>json-schema-podo-generator</artifactId>
  <version>0.0.1-SNAPSHOT</version>

  <packaging>pom</packaging>
  <name>json-schema-podo-generator</name>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
    <sonar.organization>gspatace</sonar.organization>
    <sonar.host.url>https://sonarcloud.io</sonar.host.url>

    <!-- maven plugins versions -->
    <maven.assembly.plugin.version>3.3.0</maven.assembly.plugin.version>
    <maven.clean.plugin.version>3.2.0</maven.clean.plugin.version>
    <maven.dependecy.plugin.version>3.6.0</maven.dependecy.plugin.version>
    <maven.jar.plugin.version>3.0.2</maven.jar.plugin.version>
    <maven.javadoc.plugin.version>3.2.0</maven.javadoc.plugin.version>
    <maven.resources.plugin.version>3.3.0</maven.resources.plugin.version>
    <maven.surefire.plugin.version>3.0.0-M4</maven.surefire.plugin.version>
    <maven.surefire.report.plugin.version>3.0.0-M5</maven.surefire.report.plugin.version>
    <!-- end of maven plugins versions -->

    <!-- 3rd party plugins version -->
    <frontend.maven.plugin.version>1.12.1</frontend.maven.plugin.version>
    <spring.boot.maven.plugin.version>3.0.2</spring.boot.maven.plugin.version>
    <!-- end of 3rd party plugins version -->

    <!-- 3rd party dependencies versions -->
    <classpath.version>4.8.146</classpath.version>
    <commons.compress.version>1.21</commons.compress.version>
    <commons.lang3.version>3.11</commons.lang3.version>
    <jackson.core.version>2.12.7</jackson.core.version>
    <jackson.databind.version>2.12.7.1</jackson.databind.version>
    <jackson.datatype.jdk8.version>2.11.3</jackson.datatype.jdk8.version>
    <jibx.tools.version>1.3.3</jibx.tools.version>
    <jmustache.version>1.15</jmustache.version>
    <jsonassert.version>1.5.0</jsonassert.version>
    <junit.version>4.13.1</junit.version>
    <log4j.all.version>2.17.1</log4j.all.version>
    <lombok.version>1.18.24</lombok.version>
    <node.version>v16.17.0</node.version>
    <npm.version>9.8.1</npm.version>
    <picocli.version>4.6.1</picocli.version>
    <spring.boot.autoconfigure.version>2.7.12</spring.boot.autoconfigure.version>
    <spring.boot.starter.test.version>2.7.6</spring.boot.starter.test.version>
    <spring.boot.starter.web.version>2.7.6</spring.boot.starter.web.version>
    <spring.framework.spring.test>5.3.24</spring.framework.spring.test>
    <springdoc.openapi.ui.version>1.6.14</springdoc.openapi.ui.version>
    <mockito.junit.jupiter.version>4.8.1</mockito.junit.jupiter.version>

    <!-- end of 3rd party dependencies version -->
  </properties>

  <description>JSON Schema PODO Generator</description>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>io.github.classgraph</groupId>
        <artifactId>classgraph</artifactId>
        <version>${classpath.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-compress</artifactId>
        <version>${commons.compress.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-lang3</artifactId>
        <version>${commons.lang3.version}</version>
      </dependency>
      <dependency>
        <groupId>com.fasterxml.jackson.core</groupId>
        <artifactId>jackson-core</artifactId>
        <version>${jackson.core.version}</version>
      </dependency>
      <dependency>
        <groupId>com.fasterxml.jackson.core</groupId>
        <artifactId>jackson-databind</artifactId>
        <version>${jackson.databind.version}</version>
        <scope>compile</scope>
      </dependency>
      <dependency>
        <groupId>com.fasterxml.jackson.datatype</groupId>
        <artifactId>jackson-datatype-jdk8</artifactId>
        <version>${jackson.datatype.jdk8.version}</version>
        <scope>compile</scope>
      </dependency>
      <dependency>
        <groupId>org.jibx</groupId>
        <artifactId>jibx-tools</artifactId>
        <version>${jibx.tools.version}</version>
      </dependency>
      <dependency>
        <groupId>com.samskivert</groupId>
        <artifactId>jmustache</artifactId>
        <version>${jmustache.version}</version>
        <scope>compile</scope>
      </dependency>
      <dependency>
        <groupId>org.skyscreamer</groupId>
        <artifactId>jsonassert</artifactId>
        <version>${jsonassert.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>junit</groupId>
        <artifactId>junit</artifactId>
        <version>${junit.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.apache.logging.log4j</groupId>
        <artifactId>log4j-api</artifactId>
        <version>${log4j.all.version}</version>
        <scope>compile</scope>
      </dependency>
      <dependency>
        <groupId>org.apache.logging.log4j</groupId>
        <artifactId>log4j-core</artifactId>
        <version>${log4j.all.version}</version>
        <scope>compile</scope>
      </dependency>
      <dependency>
        <groupId>org.apache.logging.log4j</groupId>
        <artifactId>log4j-slf4j-impl</artifactId>
        <version>${log4j.all.version}</version>
        <scope>compile</scope>
      </dependency>
      <dependency>
        <groupId>org.projectlombok</groupId>
        <artifactId>lombok</artifactId>
        <version>${lombok.version}</version>
        <scope>compile</scope>
      </dependency>
      <dependency>
        <groupId>org.mockito</groupId>
        <artifactId>mockito-junit-jupiter</artifactId>
        <version>${mockito.junit.jupiter.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>info.picocli</groupId>
        <artifactId>picocli</artifactId>
        <version>${picocli.version}</version>
        <scope>compile</scope>
      </dependency>
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-autoconfigure</artifactId>
        <version>${spring.boot.autoconfigure.version}</version>
        <scope>compile</scope>
      </dependency>
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-test</artifactId>
        <version>${spring.boot.starter.test.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-web</artifactId>
        <version>${spring.boot.starter.web.version}</version>
        <scope>compile</scope>
      </dependency>
      <dependency>
        <groupId>org.springframework</groupId>
        <artifactId>spring-test</artifactId>
        <version>${spring.framework.spring.test}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.springdoc</groupId>
        <artifactId>springdoc-openapi-ui</artifactId>
        <version>${springdoc.openapi.ui.version}</version>
        <scope>compile</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <modules>
    <module>modules/core</module>
    <module>modules/cli-wrapper</module>
    <module>modules/rest-api</module>
  </modules>

  <build>
    <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
      <plugins>
        <plugin>
          <artifactId>maven-assembly-plugin</artifactId>
          <version>${maven.assembly.plugin.version}</version>
        </plugin>
        <plugin>
          <artifactId>maven-clean-plugin</artifactId>
          <version>${maven.clean.plugin.version}</version>
        </plugin>
        <plugin>
          <artifactId>maven-dependency-plugin</artifactId>
          <version>${maven.dependecy.plugin.version}</version>
        </plugin>
        <plugin>
          <artifactId>maven-jar-plugin</artifactId>
          <version>${maven.jar.plugin.version}</version>
        </plugin>
        <plugin>
          <artifactId>maven-javadoc-plugin</artifactId>
          <version>${maven.javadoc.plugin.version}</version>
        </plugin>
        <plugin>
          <artifactId>maven-resources-plugin</artifactId>
          <version>${maven.resources.plugin.version}</version>
        </plugin>
        <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>${maven.surefire.plugin.version}</version>
        </plugin>
        <plugin>
          <artifactId>maven-surefire-report-plugin</artifactId>
          <version>${maven.surefire.report.plugin.version}</version>
        </plugin>
        <plugin>
          <groupId>com.github.eirslett</groupId>
          <artifactId>frontend-maven-plugin</artifactId>
          <version>${frontend.maven.plugin.version}</version>
        </plugin>
        <plugin>
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-maven-plugin</artifactId>
          <version>${spring.boot.maven.plugin.version}</version>
          <executions>
            <execution>
              <goals>
                <goal>repackage</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-help-plugin</artifactId>
          <version>3.4.0</version>
          <inherited>false</inherited>
          <executions>
            <execution>
              <id>show-active-profiles</id>
              <phase>compile</phase>
              <goals>
                <goal>active-profiles</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <artifactId>maven-javadoc-plugin</artifactId>
        <configuration>
          <show>protected</show>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>0.8.7</version>
        <executions>
          <execution>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
          </execution>
          <execution>
            <id>report</id>
            <phase>prepare-package</phase>
            <goals>
              <goal>report</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-help-plugin</artifactId>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>with-frontend-app</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <modules>
        <module>modules/webapp</module>
      </modules>
    </profile>
    <profile>
      <id>without-frontend-app</id>
      <activation>
        <property>
          <name>no-frontend-app</name>
        </property>
      </activation>
    </profile>
  </profiles>
</project>
